# SeminarSEProject

./: DB_DDL.sql  Inserts.sql  README.md
backend/: .pylintrc  db_connection.py  pyproject.toml  task.py
backend/features/: add_task.feature  change_state.feature  delete_task.feature
backend/features/steps/: add_steps.py  change_state_steps.py  delete_steps.py
backend/locust/: locustfile.py
backend/src/: db_connection.py  main.py  task.py  task_DAO.py
backend/src/backend/: main.py  task_DAO.py
backend/tests/: test_endpoints.py  test_task_dao.py  test_task_model.py
frontend/: Index.html  eslint.config.mjs  logic.js  package-lock.json  package.json  server.js  styles.css
frontend/static/scripts/: api.js  dom.js  dragdrop.js  events.js  main.js
frontend/static/styles/: styles.css
