[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonanthan Sotelo",email = "jsotelor@udistrital.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
locust = "^2.37.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
